tests/ui/deref_forbidden.stderr
Error [E0208]: `*` isn't allowed here
  --> tests/ui/deref_forbidden.lex:3:11
    |
  3 |     print(*x);
    |           ^
 Why: dereferencing with `*` is only for expert code inside `unsafe`
 Fix: remove `*`, or wrap this code in `unsafe { ... }`
